test/extern/ferguson/mismatch-errors/mismatch-rif-if.good
mismatch-rif-if.chpl:4: error: extern proc does not match C declaration
